--- a/KP/Views/ViewServer.xaml
+++ b/KP/Views/ViewServer.xaml
@@ -46,7 +46,7 @@
                     </ListBox.ItemTemplate>
                 </ListBox>
                 <TextBox Text="{Binding Instance_User_Name, Mode=TwoWay}"></TextBox>
-                <Button Content="Connect to server" Command="{Binding CommandConnectToServer}" IsEnabled="{Binding Button_Connect_Status}"></Button>
+                <Button Content="Connect to server" Command="{Binding CommandConnectToServer}"></Button>
             </StackPanel>
             
             <StackPanel>
